--- a/doc/Thesis.tex
+++ b/doc/Thesis.tex
@@ -143,11 +143,12 @@
 \section{From Modeling to Local Search}
 \input{modelsol}
 \newpage
-\section{Local Search Engine} \label{sec_local}
+\section{Local Search and Metaheuristics} \label{sec_local}
   \input{lse}
   \subsection{Neighborhoods}
-    \subsubsection{Neighborhood Operations}
-\section{Metaheuristics}
+  \input{neighborhoods}
+  \subsection{Search Procedures}
+  \input{sp}
 \section{Tests}
 \section{Results}
 \section{Future Work}
