Rdy for gecode test

--- a/doc/Thesis.tex
+++ b/doc/Thesis.tex
@@ -149,7 +149,12 @@
   \input{neighborhoods}
   \subsection{Search Procedures}
   \input{sp}
+  \subsection{Local Search Algorithms}
+  \input{algimp}
+  \subsection{Change in Local Search Design}
 \section{Tests}
+\subsection{Gecode Search Engine}
+\input{gecodetest}
 \section{Results}
 \section{Future Work}
   \input{future}
