--- a/doc/archInv.tex
+++ b/doc/archInv.tex
@@ -24,5 +24,6 @@ storage. Another benefit is the search procedures do not have to examine which i
 they 
 all have the same methods. It also makes it easier to add new invariants since all the functionality is implemented by 
 the new invariant and nothing has to be changed in the Local Search Engine. \\ 
- 
-
+\subsubsection{Implementation of Sum}
+\subsubsection{Implementation of LEQViolation}
+\subsubsection{Implementation of EQViolation}
